--- a/src/lang/galician.txt
+++ b/src/lang/galician.txt
@@ -7212,3 +7212,52 @@ STR_ORDER_CHANGE_COUNTER_BUTTON                                 :Modificar conta
 STR_ORDER_CHANGE_COUNTER_TOOLTIP                                :{BLACK}O contador a modificar
 STR_TIMETABLE_FILL_TIMETABLE_SUGGESTION                         :{BLACK}Activa 'automático' para encher e actualizar automáticamente os tempos de espera e viaxe.
 STR_TIMETABLE_FILL_TIMETABLE_SUGGESTION_2                       :{BLACK}(Alternativamente, activa 'Autorecheo' ou cubreo manualmente nos campos da táboa de horarios).
+STR_VEHICLE_INFO_PROFIT_THIS_YEAR_LAST_YEAR_MIN_PERFORMANCE     :{BLACK}Beneficios este ano: {LTBLUE}{CURRENCY_LONG} (último ano: {CURRENCY_LONG}) {BLACK}Rendemento Mín.: {LTBLUE}{POWER_TO_WEIGHT}
+STR_UNITS_POWER_IMPERIAL_TO_WEIGHT_IMPERIAL                     :{DECIMAL}{NBSP}hp/t
+STR_UNITS_POWER_IMPERIAL_TO_WEIGHT_METRIC                       :{DECIMAL}{NBSP}hp/t
+STR_UNITS_POWER_IMPERIAL_TO_WEIGHT_SI                           :{DECIMAL}{NBSP}hp/Mg
+STR_UNITS_POWER_METRIC_TO_WEIGHT_IMPERIAL                       :{DECIMAL}{NBSP}hp/t
+STR_UNITS_POWER_METRIC_TO_WEIGHT_METRIC                         :{DECIMAL}{NBSP}hp/t
+STR_UNITS_POWER_METRIC_TO_WEIGHT_SI                             :{DECIMAL}{NBSP}hp/Mg
+STR_UNITS_POWER_SI_TO_WEIGHT_IMPERIAL                           :{DECIMAL}{NBSP}kW/t
+STR_UNITS_POWER_SI_TO_WEIGHT_METRIC                             :{DECIMAL}{NBSP}kW/t
+STR_UNITS_POWER_SI_TO_WEIGHT_SI                                 :{DECIMAL}{NBSP}W/kg
+STR_SETTINGS_MENU_AI_SETTINGS                                   :Axustes da IA
+STR_SETTINGS_MENU_GAMESCRIPT_SETTINGS                           :Axustes dos scripts de xogo
+STR_CONFIG_SETTING_WARN_NO_DEPOT_ORDER_IF_BREAKDOWNS_ON         :Se as avarías dos vehículos están habilitadas
+STR_CONFIG_SETTING_DUAL_PANE_TRAIN_PURCHASE_WINDOW_DUAL_BUTTONS :Amosar sets de botóns separados na fiestra de mercar trens: {STRING2}
+STR_CONFIG_SETTING_DUAL_PANE_TRAIN_PURCHASE_WINDOW_DUAL_BUTTONS_HELPTEXT:Cando se habilita, as listas de locomotoras e vagóns das fiestras de compra de trens cada unha ten o seu set de botóns.
+STR_CONFIG_SETTING_SHOW_VEHICLE_ROUTE_MODE                      :Amosar ruta superposta do vehículo enfocado: {STRING2}
+STR_CONFIG_SETTING_SHOW_VEHICLE_ROUTE_MODE_HELPTEXT             :Cando se habilita e hai unha fiestra dun vehículo focalizada, amosar marcadores e/ou liñas entre as localizacións das ordes do vehículo.{}O modo Só estación de parada amosa só as ordes onde o vehículo para na estación (exclúe puntos de ruta, depósitos e "vías").
+STR_CONFIG_SETTING_SHOW_VEHICLE_ROUTE_MODE_OFF                  :Desactivado
+STR_CONFIG_SETTING_SHOW_VEHICLE_ROUTE_MODE_ALL_LOCATIONS        :Todas as localizacións das ordes
+STR_CONFIG_SETTING_SHOW_VEHICLE_ROUTE_MODE_STATIONS_ONLY        :Só as estacións de parada
+STR_CONFIG_SETTING_SHOW_VEHICLE_ROUTE_STEPS_HELPTEXT            :Cando se habilita, e a fiestra do vehículo está focalizada, un marcador co número de orde e tipo amósase na localización de cada orde.
+STR_CONFIG_SETTING_VIEWPORT_MAP_SHOW_VEHICLE_ROUTE_HELPTEXT     :Cando se habilita, e a fiestra do vehículo está focalizada, dibuxanse liñas entre as localizacións das ordes de cada vehículo. (As ramas de ordes condicionais amósanse como liñas amarelo).
+STR_CONFIG_SETTING_VIEWPORT_SIGNALS                             :{ORANGE}Sinais
+STR_CONFIG_SETTING_VEHICLE_ROUTE_OVERLAY                        :{ORANGE}Capa superposta da ruta do vehículo
+STR_CONFIG_SETTING_NETWORK_CHANGE_NOT_ALLOWED                   :{WHITE}Non se pode modificar a opción...
+STR_CONFIG_SETTING_NETWORK_CHANGE_NOT_ALLOWED_NEWGRF            :{WHITE}...o axuste está controlado por un NewGRF
+STR_INTRO_AI_SETTINGS                                           :{BLACK}Axustes da IA
+STR_INTRO_GAMESCRIPT_SETTINGS                                   :{BLACK}Axustes dos scripts de xogo
+STR_INTRO_TOOLTIP_AI_SETTINGS                                   :{BLACK}Amosar axustes da IA
+STR_INTRO_TOOLTIP_GAMESCRIPT_SETTINGS                           :{BLACK}Amosar axustes dos scripts de xogo
+STR_MAPGEN_NEWGRF_SETTINGS                                      :{BLACK}Axustes dos NewGRF
+STR_MAPGEN_NEWGRF_SETTINGS_TOOLTIP                              :{BLACK}Amosar axustes dos NewGRF
+STR_MAPGEN_AI_SETTINGS                                          :{BLACK}Axustes da IA
+STR_MAPGEN_AI_SETTINGS_TOOLTIP                                  :{BLACK}Amosar axustes da IA
+STR_MAPGEN_GS_SETTINGS                                          :{BLACK}Axustes dos scripts de xogo
+STR_MAPGEN_GS_SETTINGS_TOOLTIP                                  :{BLACK}Amosar axustes dos scripts de xogo
+STR_CARGO_TYPE_FILTER_ALL                                       :Todos os tipos de carga
+STR_CARGO_TYPE_FILTER_NONE                                      :Ningún
+STR_AI_CONFIG_CAPTION_AI                                        :{WHITE}Axustes da IA
+STR_AI_CONFIG_CAPTION_GAMESCRIPT                                :{WHITE}Axustes dos scripts de xogo
+STR_AI_CONFIG_GAMESCRIPT_PARAM                                  :{SILVER}Parámetros
+STR_TMPL_ADD_LOCOMOTIVE                                         :{BLACK}Engadir locomotora
+STR_TMPL_ADD_WAGON                                              :{BLACK}Engadir vagón
+STR_TMPL_ADD_VEHICLE                                            :{BLACK}Engadir vehículo
+STR_TMPL_ADD_LOCOMOTIVE_REFIT                                   :{BLACK}Engadir e reaxustar locomotora
+STR_TMPL_ADD_WAGON_REFIT                                        :{BLACK}Engadir e reaxustar vagón
+STR_TMPL_ADD_VEHICLE_REFIT                                      :{BLACK}Engadir e reaxustar vehículo
+STR_TMPL_ADD_TOOLTIP                                            :{BLACK}Engadir o vehículo destacado ó modelo.
+STR_TMPL_ADD_REFIT_TOOLTIP                                      :{BLACK}Engadir e reaxustar o vehículo destacado ó modelo.
