--- a/src/lang/galician.txt
+++ b/src/lang/galician.txt
@@ -7272,3 +7272,19 @@ STR_DEPARTURES_SHOW_TRAINS_TOOLTIP                              :{BLACK}Amosar p
 STR_DEPARTURES_SHOW_ROAD_VEHICLES_TOOLTIP                       :{BLACK}Amosar próximos vehículos de estrada nos horarios desta estación
 STR_DEPARTURES_SHOW_SHIPS_TOOLTIP                               :{BLACK}Amosar próximos barcos nos horarios deste porto
 STR_DEPARTURES_SHOW_AIRCRAFT_TOOLTIP                            :{BLACK}Amosar próximos avións nos horarios deste aeroporto
+
+######################### Update 2023-01-29
+# Remember to first update the project and rebuild it all to have the latest instance of strgen.
+# Obtained translations strings with: ../../build/src/strgen/strgen -w galician.txt 2>&1 | cut -d\' -f 2 | head -n-1 | xargs -I $ grep -w $ english.txt >> galician.txt
+#########################
+STR_CONFIG_SETTING_VIEWPORT_MAP_DEFAULT_MODE_HELPTEXT           :Modo de visualización por defecto para a xanela principal e calquera outra xanela, cando se fai zoom out ata o modo mapa.
+STR_CONFIG_SETTING_ALLOW_TOWN_BRIDGES                           :As vilas poden construír pontes: {STRING2}
+STR_CONFIG_SETTING_ALLOW_TOWN_BRIDGES_HELPTEXT                  :Habilitar isto permite as vilas construír pontes
+STR_LINKGRAPH_STATS_TOOLTIP_TIME_EXTENSION_GENERAL              :{}Tempo de viaxe promedio: {STRING1}
+STR_LINKGRAPH_STATS_TOOLTIP_CAPACITY                            :{}Capacidade: {CARGO_LONG}
+STR_SELECT_BRIDGE_INFO_NAME                                     :{GOLD}{STRING}
+STR_SELECT_BRIDGE_INFO_NAME_MAX_SPEED                           :{GOLD}{STRING},{} {VELOCITY}
+STR_SELECT_BRIDGE_INFO_NAME_COST                                :{GOLD}{0:STRING},{} {WHITE}{2:CURRENCY_LONG}
+STR_SELECT_BRIDGE_INFO_NAME_MAX_SPEED_COST                      :{GOLD}{STRING},{} {VELOCITY} {WHITE}{CURRENCY_LONG}
+STR_LOCAL_AUTHORITY_SETTING_OVERRIDE_TOWN_GROWTH                :Velocidade de crecemento da vila
+STR_LOCAL_AUTHORITY_SETTING_OVERRIDE_BRIDGES                    :Permitido construír pontes
